added data cleaning and a switch variable for it

--- a/MaraTFIDNB.ipynb
+++ b/MaraTFIDNB.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import feature_extraction, linear_model, model_selection, preprocessing\n",
+    "from sklearn import feature_extraction, linear_model, model_selection, preprocessing \n",
+    "from sklearn.feature_extraction.text import TfidfTransformer, CountVectorizer \n",
     "\n",
     "train_df = pd.read_csv(\"train.csv\")\n",
     "test_df = pd.read_csv(\"test.csv\")"
@@ -16,72 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>location</th>\n",
-       "      <th>text</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id keyword location                                               text  \\\n",
-       "0   1     NaN      NaN  Our Deeds are the Reason of this #earthquake M...   \n",
-       "\n",
-       "   target  \n",
-       "0       1  "
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#what does the data look like\n",
     "\n",
-    "train_df.iloc[:1,:]\n"
+    "train_df.iloc[:1,:]\n",
+    "clense_data=True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +91,7 @@
        "1       1  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +170,7 @@
        "16  24     NaN      NaN   I love fruits       0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +184,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dillindallin\n",
+      "Daalia \n",
+      "getting started\n",
+      "\n",
+      "What shall we do today zequestion\n",
+      "haa  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#clense data is so instructed, to test whether cleaning data improves performance\n",
+    "#lets clean the data\n",
+    "if (clense_data==True):\n",
+    "    %run DataClenser.ipynb\n",
+    "    train_df['text'] = train_df['text'].apply(lambda x: text_clense(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7613, 21637)"
+       "(7613, 17798)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +277,7 @@
        "Name: target, Length: 7613, dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.66666667, 0.65609425, 0.72431507])"
+       "array([0.67159035, 0.65848113, 0.72546476])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +389,7 @@
        "4  11       1"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,11 +402,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_submission.to_csv(\"submission2.csv\", index=False)"
+    "if (clense_data==True):\n",
+    "    sample_submission.to_csv(\"submission2_clensed_data.csv\", index=False)\n",
+    "else:\n",
+    "    sample_submission.to_csv(\"submission2.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tsekataan miten hyvin tää meni\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
