added data cleaning and a switch variable for it

--- a/MaraTFIDF-Pipe-GridCV.ipynb
+++ b/MaraTFIDF-Pipe-GridCV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,72 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>location</th>\n",
-       "      <th>text</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id keyword location                                               text  \\\n",
-       "0   1     NaN      NaN  Our Deeds are the Reason of this #earthquake M...   \n",
-       "\n",
-       "   target  \n",
-       "0       1  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#what does the data look like\n",
     "\n",
-    "train_df.iloc[:1,:]\n"
+    "train_df.iloc[:1,:]\n",
+    "clense_data=True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +91,7 @@
        "1       1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +170,7 @@
        "16  24     NaN      NaN   I love fruits       0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +184,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dillindallin\n",
+      "Daalia \n",
+      "getting started\n",
+      "\n",
+      "What shall we do today zequestion\n",
+      "haa  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#clense data is so instructed, to test whether cleaning data improves performance\n",
+    "#lets clean the data\n",
+    "if (clense_data==True):\n",
+    "    %run DataClenser.ipynb\n",
+    "    train_df['text'] = train_df['text'].apply(lambda x: text_clense(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +236,7 @@
        "         verbose=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.716012084592145"
+       "0.7207408380401944"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +360,7 @@
        "4  11       1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,11 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_submission.to_csv(\"submission5-TFIDPipeGridCV.csv\", index=False)"
+    "if (clense_data==True):\n",
+    "    sample_submission.to_csv(\"submission5-TFIDPipeGridCV_cleaned.csv\", index=False)\n",
+    "else:\n",
+    "    sample_submission.to_csv(\"submission5-TFIDPipeGridCV.csv\", index=False)"
    ]
   },
   {
