added data cleaning

--- a/MaraLSA-Pipe-GridCV.ipynb
+++ b/MaraLSA-Pipe-GridCV.ipynb
@@ -191,13 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Dillindallin\n",
-      "Daalia \n",
-      "getting started\n",
-      "\n",
-      "What shall we do today zequestion\n",
-      "haa  \n"
+      "Requirement already satisfied: pyspellchecker in /Users/marttiylikoski/opt/anaconda3/lib/python3.7/site-packages (0.5.4)\r\n"
      ]
     }
    ],
@@ -217,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "(7613, 17798)"
+       "(7613, 14731)"
       ]
      },
      "execution_count": 6,
@@ -238,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,15 +260,26 @@
        "Name: target, Length: 7613, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "text_clf = LinearDiscriminantAnalysis().fit(train_tfidf, train_df[\"target\"])\n",
-    "train_df[\"target\"]\n",
+    "text_clf = LinearDiscriminantAnalysis().fit(train_vectors.toarray(), train_df[\"target\"])\n",
+    "train_df[\"target\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#text_clf = LinearDiscriminantAnalysis().fit(train_tfidf, train_df[\"target\"])\n",
+    "#train_df[\"target\"]\n",
     "\n"
    ]
   },
